Re: SHF_LINK_ORDER fixup_link_order in ld

PR 27160
	* ldelfgen.c (compare_link_order): Protect access of ELF section
	data.
	(add_link_order_input_section): Remove redundant NULL check.
	Use bfd_get_flavour.
	(ldelf_map_segments): Use bfd_get_flavour.